linking media properly

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="welcome" id="welcome">
         <div class="main_title">
             <div class="titlei">Hi, I'm Steve.</div>
-            <img class="profile" src="/media/face.jpeg" alt="me">
+            <img class="profile" src="./media/face.jpeg" alt="me">
             <div class="titlei">Welcome to my profile.</div> 
         </div>
     </div>
@@ -162,10 +162,10 @@
                 <br>
                 <div class="thanks">Thanks for visiting my profile! <br><br> Check out my socials here. </div>
                 <br>
-                <a href="https://www.instagram.com/_steveyeung/" class="socials" target="_blank"><img src="/media/icons/insta.png" alt="insta"></a>
-                <a href="http://www.linkedin.com/in/steve-yeung-47897321b" class="socials" target="_blank"><img src="/media/icons/linkedin.png" alt="linkedin"></a>
-                <a href="https://github.com/Zyphias" class="socials" target="_blank"><img src="/media/icons/github.png" alt="github"></a>
-                <a href="https://www.facebook.com/steve.yeung.92798/" class="socials" target="_blank"><img src="/media/icons/facebook.png" alt="facebook"></a>
+                <a href="https://www.instagram.com/_steveyeung/" class="socials" target="_blank"><img src="./media/icons/insta.png" alt="insta"></a>
+                <a href="http://www.linkedin.com/in/steve-yeung-47897321b" class="socials" target="_blank"><img src="./media/icons/linkedin.png" alt="linkedin"></a>
+                <a href="https://github.com/Zyphias" class="socials" target="_blank"><img src="./media/icons/github.png" alt="github"></a>
+                <a href="https://www.facebook.com/steve.yeung.92798/" class="socials" target="_blank"><img src="./media/icons/facebook.png" alt="facebook"></a>
             </div>
         </div>
     </div>
