--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/general.css">
     <link rel="stylesheet" href="./css/leaves.css">
     <link rel="stylesheet" href="./css/themes.css">
-    <script src="./node_modules/@aicdev/snowflakejs/dist/snowflake.min.js"></script>
+    <script type="text/javascript" src="./node_modules/@aicdev/snowflakejs/dist/snowflake.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script>
         $(document).ready(function(){
